--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -31,10 +31,6 @@
   margin-bottom: 1rem;
 }
 
-.archived {
-  background-color: $red2
-}
-
 #error_explanation {
   @extend .card;
   max-width: 32rem;
@@ -52,5 +48,20 @@
 
   ul {
     margin-bottom: 0;
+  }
+}
+
+.banner {
+  @extend .card;
+  max-width: 32rem;
+  padding: .5em;
+}
+
+.banner--archived {
+  background-color: $yellow1;
+  border: 1px solid $yellow3;
+  color: $yellow8;
+  a {
+    color: $yellow8;
   }
 }
